plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
    id "io.freefair.lombok" version "8.3"
}

apply plugin: 'io.spring.dependency-management'

group = 'com'
version = '1'

java {
    sourceCompatibility = '17'
}

test {
    useJUnitPlatform()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}



dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
    testImplementation 'org.springframework.security:spring-security-test:6.1.5'
    testImplementation 'com.h2database:h2'
    testImplementation 'mysql:mysql-connector-java'

    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.1'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.1.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
    implementation "org.mapstruct:mapstruct:1.5.5.Final"
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'

    implementation 'org.flywaydb:flyway-core:9.16.3'
    implementation 'org.flywaydb:flyway-mysql:9.16.3'
}

